Fix footer on small devices

--- a/priv/static/main.css
+++ b/priv/static/main.css
@@ -10,6 +10,16 @@
   }
 }
 
+.xs-collapse {
+  display: none;
+}
+
+@media(min-width: 768px) {
+  .xs-collapse {
+    display: block;
+  }
+}
+
 html {
   position: relative;
   min-height: 100%;
